--- a/index.html
+++ b/index.html
@@ -16,6 +16,17 @@
                 <li><a href="#">header link three</a></li>
             </ul>
         </div>
+        <div class="hero-container">
+            <div class="hero-text">
+                <div class="primary-hero-text">This website is awesome</div>
+                <div class="secondary-hero-text">
+                    This website has some subtext that goes here under the main
+                    title. It's a smaller font and the color is lower contrast
+                </div>
+                <button class="hero-button">Sign up</button>
+            </div>
+            <div class="hero-image">Placeholder</div>
+        </div>
 
     </body>
 </html>
