--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 </div>
                 <button class="hero-button">Sign up</button>
             </div>
-            <div class="hero-image">Placeholder</div>
+            <img src="./images/knitted-goods.jpeg" class="hero-image" alt="Skeins of yarn">
         </div>
 
     </body>
