Initialize html and css styles for info section
Inititalized html and basic css styles for info section, including
flexbox elements for alignment. The hero image was used as a placeholder
for the info images along with some placeholder text

--- a/index.html
+++ b/index.html
@@ -27,6 +27,27 @@
             </div>
             <img src="./images/knitted-goods.jpeg" class="hero-image" alt="Skeins of yarn">
         </div>
+        <div class="info-container">
+            <div class="info-header">Some random information</div>
+            <div class="info-box-container">
+                <div class="info-box">
+                    <img src="./images/knitted-goods.jpeg" class="info-image" alt="Skeins of yarn">
+                    this is some subtext under an illustration or image
+                </div>
+                <div class="info-box">
+                    <img src="./images/knitted-goods.jpeg" class="info-image" alt="Skeins of yarn">
+                    this is some subtext under an illustration or image
+                </div>
+                <div class="info-box">
+                    <img src="./images/knitted-goods.jpeg" class="info-image" alt="Skeins of yarn">
+                    this is some subtext under an illustration or image
+                </div>
+                <div class="info-box">
+                    <img src="./images/knitted-goods.jpeg" class="info-image" alt="Skeins of yarn">
+                    this is some subtext under an illustration or image
+                </div>
+            </div>
+        </div>
 
     </body>
 </html>
