Rename info-box to info-card and realign it
Renamed info-box, and everything referring to it to info-card to further
differentiate it from info-container. Also realigned the info-box and
the image size

--- a/index.html
+++ b/index.html
@@ -29,20 +29,20 @@
         </div>
         <div class="info-container">
             <div class="info-header">Some random information</div>
-            <div class="info-box-container">
-                <div class="info-box">
+            <div class="info-card-container">
+                <div class="info-card">
                     <img src="./images/knitted-goods.jpeg" class="info-image" alt="Skeins of yarn">
                     this is some subtext under an illustration or image
                 </div>
-                <div class="info-box">
+                <div class="info-card">
                     <img src="./images/knitted-goods.jpeg" class="info-image" alt="Skeins of yarn">
                     this is some subtext under an illustration or image
                 </div>
-                <div class="info-box">
+                <div class="info-card">
                     <img src="./images/knitted-goods.jpeg" class="info-image" alt="Skeins of yarn">
                     this is some subtext under an illustration or image
                 </div>
-                <div class="info-box">
+                <div class="info-card">
                     <img src="./images/knitted-goods.jpeg" class="info-image" alt="Skeins of yarn">
                     this is some subtext under an illustration or image
                 </div>
