--- a/index.html
+++ b/index.html
@@ -56,6 +56,13 @@
             </p>
             <p class="quote-author">-Batman</p>
         </div>
+        <div class="call-container">
+            <div class="call">
+                <h3>Call to action! It's Time!</h3>
+                <p>Sign up for our product by clicking that button right over 
+                    there!</p>
+            </div>
+        </div>
 
     </body>
 </html>
