--- a/index.html
+++ b/index.html
@@ -58,9 +58,14 @@
         </div>
         <div class="call-container">
             <div class="call">
-                <h3>Call to action! It's Time!</h3>
-                <p>Sign up for our product by clicking that button right over 
-                    there!</p>
+                <div class="call-text">
+                    <h3>Call to action! It's Time!</h3>
+                    <p>
+                        Sign up for our product by clicking that button right
+                        over there!
+                    </p>
+                </div>
+                <button class="call-button">Sign up</button>         
             </div>
         </div>
 
