--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
         <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,
 100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=sw
 ap" rel="stylesheet">
-        <title>Landing Page</title>
+        <title>Karens Knitted Goods</title>
     </head>
     <body>
         <div class="header">
-            <div class="header-logo">Header Logo</div>
+            <div class="header-logo">Karens Knitted Goods</div>
             <ul>
-                <li><a href="#">header link one</a></li>
-                <li><a href="#">header link two</a></li>
-                <li><a href="#">header link three</a></li>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Order</a></li>
             </ul>
         </div>
         <div class="hero-container">
@@ -60,11 +60,13 @@ ap" rel="stylesheet">
         </div>
         <div class="quote-container">
             <p class="quote">
-                This is an inspiring quote, or a testimonial from a customer.
-                Maybe it's just filling up space, or maybe people will actually
-                read it. Who knows? All I know is that it looks nice.
+                I was left speechless by the wonderful, handmade design of the
+                baby sweater that I had ordered for my niece. The care and
+                attention provided by Karen's Knitted Goods for this custom
+                order was at a level I could not have dreamed of. This will
+                sweater will surely be cherished for years to come!
             </p>
-            <p class="quote-author">-Batman</p>
+            <p class="quote-author">-Mike</p>
         </div>
         <div class="call-container">
             <div class="call">
