Update hero text
Updated the primary and secondary hero text to specification

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@ ap" rel="stylesheet">
         </div>
         <div class="hero-container">
             <div class="hero-text">
-                <div class="primary-hero-text">This website is awesome</div>
+                <div class="primary-hero-text">Welcome!</div>
                 <div class="secondary-hero-text">
-                    This website has some subtext that goes here under the main
-                    title. It's a smaller font and the color is lower contrast
+                    Welcome to Karens Knitted Goods. Sign-up for Karens mailing
+                    list now and receieve 15% off your next custom order!
                 </div>
                 <button class="hero-button">Sign up</button>
             </div>
