Add info images & update html content
Added the four info images & updated the html content to specification

--- a/index.html
+++ b/index.html
@@ -34,27 +34,27 @@ ap" rel="stylesheet">
             alt="Skeins of yarn">
         </div>
         <div class="info-container">
-            <div class="info-header">Some random information</div>
+            <div class="info-header">Find your knitted comfort</div>
             <div class="info-card-container">
                 <div class="info-card">
-                    <img src="./images/knitted-goods.jpeg" class="info-image" 
+                    <img src="./images/knit-info-1.jpg" class="info-image" 
                     alt="Skeins of yarn">
-                    this is some subtext under an illustration or image
+                    We only use the softest, most richly dyed yarns
                 </div>
                 <div class="info-card">
-                    <img src="./images/knitted-goods.jpeg" class="info-image" 
+                    <img src="./images/knit-info-2.jpg" class="info-image" 
                     alt="Skeins of yarn">
-                    this is some subtext under an illustration or image
+                    From unique custom orders to vibrant ready-to-order classics 
                 </div>
                 <div class="info-card">
-                    <img src="./images/knitted-goods.jpeg" class="info-image" 
+                    <img src="./images/knit-info-3.jpg" class="info-image" 
                     alt="Skeins of yarn">
-                    this is some subtext under an illustration or image
+                    Our mission statement is one word: Coziness
                 </div>
                 <div class="info-card">
-                    <img src="./images/knitted-goods.jpeg" class="info-image" 
+                    <img src="./images/knit-info-4.jpg" class="info-image" 
                     alt="Skeins of yarn">
-                    this is some subtext under an illustration or image
+                    Make your world warmer with our knitted goods today
                 </div>
             </div>
         </div>
@@ -71,10 +71,10 @@ ap" rel="stylesheet">
         <div class="call-container">
             <div class="call">
                 <div class="call-text">
-                    <h3>Call to action! It's Time!</h3>
+                    <h3>Get 15% off your next custom order today!</h3>
                     <p>
-                        Sign up for our product by clicking that button right
-                        over there!
+                        Sign up for our mailing list now. As easy and clicking
+                        this button!
                     </p>
                 </div>
                 <button class="call-button">Sign up</button>         
