Fix grammatical and spelling mistakes
Corrected several grammatical and spelling mistakes in index.html

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
         <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,
 100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=sw
 ap" rel="stylesheet">
-        <title>Karens Knitted Goods</title>
+        <title>Karen's Knitted Goods</title>
     </head>
     <body>
         <div class="header">
-            <div class="header-logo">Karens Knitted Goods</div>
+            <div class="header-logo">Karen's Knitted Goods</div>
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About</a></li>
@@ -25,8 +25,8 @@ ap" rel="stylesheet">
             <div class="hero-text">
                 <div class="primary-hero-text">Welcome!</div>
                 <div class="secondary-hero-text">
-                    Welcome to Karens Knitted Goods. Sign-up for Karens mailing
-                    list now and receieve 15% off your next custom order!
+                    Welcome to Karen's Knitted Goods. Sign-up for Karens mailing
+                    list now and receive 15% off your next custom order!
                 </div>
                 <button class="hero-button">Sign up</button>
             </div>
@@ -39,7 +39,7 @@ ap" rel="stylesheet">
                 <div class="info-card">
                     <img src="./images/knit-info-1.jpg" class="info-image" 
                     alt="Skeins of yarn">
-                    We only use the softest, most richly dyed yarns
+                    We use only the softest, most richly dyed yarns
                 </div>
                 <div class="info-card">
                     <img src="./images/knit-info-2.jpg" class="info-image" 
@@ -63,8 +63,8 @@ ap" rel="stylesheet">
                 I was left speechless by the wonderful, handmade design of the
                 baby sweater that I had ordered for my niece. The care and
                 attention provided by Karen's Knitted Goods for this custom
-                order was at a level I could not have dreamed of. This will
-                sweater will surely be cherished for years to come!
+                order was at a level I could not have dreamed of. This sweater
+                will surely be cherished for years to come!
             </p>
             <p class="quote-author">-Mike</p>
         </div>
@@ -73,7 +73,7 @@ ap" rel="stylesheet">
                 <div class="call-text">
                     <h3>Get 15% off your next custom order today!</h3>
                     <p>
-                        Sign up for our mailing list now. As easy and clicking
+                        Sign up for our mailing list now. As easy as clicking
                         this button!
                     </p>
                 </div>
